# biofunc-models

./: .gitignore
analysis/PID/: redAsMinIComponentTotal.m
analysis/metric_calculation/: calculate_metric.m  process_persistence_probs_to_metric.m
analysis/scripts/: compare_diffusion_approx_to_simulation.py
docs/: Doxyfile
docs/html/: DSE_8cpp.html  DSE_8h_source.html  HSE_8cpp.html  (+67 more)
headers/: rng.h
population_genetics_models/: CMakeLists.txt  DSE.cpp  DSE.h  Data.cpp  Data.h  DataContainer.cpp  DataContainer.h  DataContainers.cpp  DataContainers.h  HSE.cpp  HSE.h  HTE.cpp  HTE.h  HTEOE.cpp  HTEOE.h  Parameters.h  allele_invasion.h  conditional_existence_probability.h  conditional_existence_status.cpp  conditional_existence_status.h  exceptions.cpp  exceptions.h  file_parameters.h  fixed_parameters.h  helper_functions.cpp  helper_functions.h  io.cpp  io.h  main.cpp  makefile  model_specification.cpp  model_specification.h  path_parameters.h  persistence_probability.h  persistence_status.cpp  persistence_status.h  print_results.cpp  print_results.h  record_context.cpp  record_context.h  (+9 more)
population_genetics_models/diploid_single_environment/: functions.cpp
population_genetics_models/haploid_two_effects_one_environment/: functions.cpp  functions.h  main.cpp
population_genetics_models/haploid_two_environments/: functions.h  main.cpp
population_genetics_models/include/: example.pb.cc  example.pb.h  feature.pb.cc  feature.pb.h  helper_functions.h
population_genetics_models/include/proto/: example.proto  feature.proto
src/: haploid_variable_environments.py
(+108 files in other folders)
